<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBE8E8"
    android:textAlignment="center"
    tools:context=".AddJobInstitute">

    <ImageView
        android:id="@+id/imageView40h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/shortbcakground" />

    <ImageView
        android:id="@+id/imageView42h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="464dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView40h"
        app:srcCompat="@drawable/bottomback" />

    <TextView
        android:id="@+id/textView3h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/textView3h"
        android:textColor="#FF9800"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView40h"
        app:layout_constraintVertical_bias="0.149" />

    <ImageView
        android:id="@+id/imageView43h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView40h"
        app:layout_constraintVertical_bias="0.312"
        app:srcCompat="@drawable/hbtnbackgroundd" />

    <ImageView
        android:id="@+id/imageView44h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView40h"
        app:layout_constraintVertical_bias="0.414"
        app:srcCompat="@drawable/hbtnbackgroundd" />

    <ImageView
        android:id="@+id/imageView45h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView40h"
        app:layout_constraintVertical_bias="0.514"
        app:srcCompat="@drawable/hbtnbackgroundd" />

    <ImageView
        android:id="@+id/imageView46h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView40h"
        app:layout_constraintVertical_bias="0.619"
        app:srcCompat="@drawable/hbtnbackgroundd" />

    <TextView
        android:id="@+id/textView5h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView5h"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView43h"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.318" />

    <TextView
        android:id="@+id/textView7h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView7h"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView44h"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424" />

    <TextView
        android:id="@+id/textView8h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/extView8h"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView44h"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.518" />

    <TextView
        android:id="@+id/textView9h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView9h"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView44h"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612" />

    <Button
        android:id="@+id/button2h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2h"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView42h"
        app:layout_constraintVertical_bias="0.283" />

    <EditText
        android:id="@+id/lable1h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/lable1h"
        app:layout_constraintBottom_toBottomOf="@+id/imageView43h"
        app:layout_constraintEnd_toEndOf="@+id/imageView43h"
        app:layout_constraintStart_toStartOf="@+id/imageView43h"
        app:layout_constraintTop_toTopOf="@+id/imageView43h"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/lable2h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/lable2h"
        app:layout_constraintBottom_toBottomOf="@+id/imageView44h"
        app:layout_constraintEnd_toEndOf="@+id/imageView44h"
        app:layout_constraintStart_toStartOf="@+id/imageView44h"
        app:layout_constraintTop_toTopOf="@+id/imageView44h"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/lable3h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/lable3h"
        app:layout_constraintBottom_toBottomOf="@+id/imageView45h"
        app:layout_constraintEnd_toEndOf="@+id/imageView45h"
        app:layout_constraintStart_toStartOf="@+id/imageView45h"
        app:layout_constraintTop_toTopOf="@+id/imageView45h"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/lable4h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/lable4h"
        app:layout_constraintBottom_toBottomOf="@+id/imageView46h"
        app:layout_constraintEnd_toEndOf="@+id/imageView46h"
        app:layout_constraintStart_toStartOf="@+id/imageView46h"
        app:layout_constraintTop_toTopOf="@+id/imageView46h"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>