<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".r_profile">

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#42BF90"
        android:text="@string/btn_logout"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12" />

    <ImageView
        android:id="@+id/imageView42r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/topbcakground" />

    <ImageView
        android:id="@+id/imageView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView42r"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/rectangle" />

    <ImageView
        android:id="@+id/imageView47"
        android:layout_width="125dp"
        android:layout_height="124dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView42r"
        app:srcCompat="@drawable/yja123" />

    <ImageView
        android:id="@+id/imageView49r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView45"
        app:layout_constraintStart_toStartOf="@+id/imageView45"
        app:layout_constraintTop_toTopOf="@+id/imageView45"
        app:srcCompat="@drawable/btnbackgroundrj" />

    <ImageView
        android:id="@+id/imageView51r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView45"
        app:layout_constraintStart_toStartOf="@+id/imageView45"
        app:layout_constraintTop_toTopOf="@+id/imageView45"
        app:srcCompat="@drawable/btnbackgroundrj" />

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="serif"
        android:text="@string/txt_welcome"
        android:textColor="#FDFDFD"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView47" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="229dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:hint="@string/profile_email"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView49r"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="@+id/imageView49r"
        app:layout_constraintTop_toTopOf="@+id/imageView49r" />

    <TextView
        android:id="@+id/profile_mobile"
        android:layout_width="229dp"
        android:layout_height="46dp"
        android:layout_marginTop="120dp"
        android:hint="@string/profile_mobile"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView49r"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="@+id/imageView49r"
        app:layout_constraintTop_toTopOf="@+id/imageView49r" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView45"
        app:layout_constraintEnd_toEndOf="@+id/imageView45"
        app:layout_constraintStart_toStartOf="@+id/imageView45"
        app:srcCompat="@drawable/btnbackgroundrj" />

    <TextView
        android:id="@+id/profile_name_txt"
        android:layout_width="233dp"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        android:hint="@string/profile_name_txt"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView12"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/imageView51r" />

</androidx.constraintlayout.widget.ConstraintLayout>