<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ContraintLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".institute_profile_page_yja">

    <ImageView
        android:id="@+id/imageView4_profile_yja"
        android:layout_width="570dp"
        android:layout_height="461dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.748"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/topbcakground" />

    <ImageView
        android:id="@+id/imageView19_profile_yja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView21_profile_yja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461"
        app:srcCompat="@drawable/yjarbtnbackground" />

    <ImageView
        android:id="@+id/imageView20_profile_yja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView21_profile_yja"
        app:layout_constraintVertical_bias="0.053"
        app:srcCompat="@drawable/yjarbtnbackground" />

    <ImageView
        android:id="@+id/imageView21_profile_yja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.446"
        app:srcCompat="@drawable/yjarbtnbackground" />

    <Button
        android:id="@+id/btn_profile_update_yja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/btn_profile_update_yja"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_profile_logout_yja"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726" />

    <Button
        android:id="@+id/btn_profile_logout_yja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_profile_logout_yja"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726" />

    <Button
        android:id="@+id/btn_profile_AdsManage_yja"
        android:layout_width="253dp"
        android:layout_height="60dp"
        android:text="@string/btn_profile_AdsManage_yja"
        app:layout_constraintBottom_toTopOf="@+id/btn_profile_JobManage_yja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_profile_update_yja" />

    <Button
        android:id="@+id/btn_profile_JobManage_yja"
        android:layout_width="255dp"
        android:layout_height="58dp"
        android:layout_marginBottom="40dp"
        android:text="@string/btn_profile_JobManage_yja"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_profile_update_yja"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_profile_name_yja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_profile_name_yja"
        app:layout_constraintBottom_toBottomOf="@+id/imageView19_profile_yja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView19_profile_yja" />

    <TextView
        android:id="@+id/tv_profile_email_yja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/imageView21_profile_yja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView21_profile_yja" />

    <TextView
        android:id="@+id/tv_profile_contactnumber_yja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/imageView20_profile_yja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView20_profile_yja" />

    <Button
        android:id="@+id/btn_profile_delete_yja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_profile_delete_yja"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_profile_update_yja"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="201dp"
        android:layout_height="159dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"
        app:srcCompat="@drawable/yja123" />

</androidx.constraintlayout.widget.ConstraintLayout>